# hackathon

./: .dockerignore  .env.example  .gitignore  FIXES_SUMMARY.md  README.md  SECURITY.md  dashboard_response.html  docker-compose.yaml  package.json  pnpm-lock.yaml  setup-server.sh  test-agrinexus.mjs  turbo.json
.github/workflows/: ci-cd.yaml
.qoder/repowiki/en/content/: Database Design.md  Development Guidelines.md  Getting Started.md  Testing Strategy.md
.qoder/repowiki/en/content/AI Integration/: AI Integration.md
.qoder/repowiki/en/content/Architecture & Design/: Architecture & Design.md
.qoder/repowiki/en/content/Shared Packages/: Shared Packages.md
.qoder/repowiki/en/meta/: repowiki-metadata.json
.qoder/repowiki/knowledge/en/: _index.yaml
apps/ai-service/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
apps/api/: .env.example  Dockerfile  package.json
apps/api/prisma/: schema.prisma  seed.ts
apps/api/src/: app.controller.spec.ts  app.module.ts  app.service.ts  main.ts
apps/web/: Dockerfile  middleware.ts  next.config.js  package.json  tailwind.config.js  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/(dashboard)/: layout,tsx  layout.tsx  page.tsx
apps/web/components/: confirm-dialog.tsx  data-table.tsx  empty-state.tsx  loading-spinner.tsx  page-header.tsx  search-input.tsx  section-label.tsx  stat-card.tsx  status-badge.tsx
apps/web/components/ui/: card.tsx  select.tsx
apps/web/lib/: api-client.ts  config.ts  design-tokens.ts  react-query.ts  user-context.tsx
nginx/: default.conf
(+73 files in other folders)
