[project]
name = "ai-service"
version = "0.2.0"
description = "Cafescope AI Service – agronomy intelligence backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.1",
    "uvicorn>=0.49.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]
